# aishub_data_collector

./: .gitignore  Cargo.toml  Changelog.md  README.md  settings_example.json  ships_example.csv
src/: main.rs  settings_example.json
